# kafka-playground

./: README.md  docker-compose.yml
bucket-priority-pattern/: README.md  go.mod  main.go
multi-version-avro-consumer/: README.md  pyproject.toml
multi-version-avro-consumer/balances/: consumer.py  models.py  producer.py  register_schemas.py  settings.py
