[project]
name = "multi-version-avro-consumer"
version = "0.1.0"
description = "Kafka consumer that handles multiple Avro schema versions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka[avro]>=2.12.1",
    "dataclasses-avroschema>=0.66.0",
]

[project.scripts]
produce = "balances.producer:main"
consume = "balances.consumer:main"
register-schemas = "balances.register_schemas:main"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

[tool.uv]
package = true
